--- a/arch/arm/configs/lineageos_n7100_defconfig
+++ b/arch/arm/configs/lineageos_n7100_defconfig
@@ -743,7 +743,9 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ZENX is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -752,6 +754,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 # CONFIG_CPU_FREQ_GOV_ADAPTIVE is not set
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 CONFIG_CPU_FREQ_GOV_PEGASUSQ_BOOST=y
 # CONFIG_CPU_FREQ_GOV_SLP is not set
